tests/neg/i6063.scala
object i0 {
trait I1[i0, I1]
def I1[I1[I1]](I1: I1[ ;  // error
I1[I1]
}

object test {
object I0 {
trait i2[I1, i2]
def i2[i2[i2]](i2: i2[ ]) = i2  // error
i2[i2]}
}